Fixed TaskList UI alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,22 @@
   display:table-cell;
 }
 
+th.name{
+  min-width:28%;
+}
+
+th.description{
+  min-width:40%;
+}
+
+th.status, th.priority{
+  min-width:12%;
+}
+
+th.cancel{
+  min-width: 8%;
+}
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -66,7 +82,6 @@ body {
     padding: 5em 0 20em 0!important;
     position: relative;
     text-align: center;
-}
 }
 
 ol, ul {
